# usefull_script

./: LICENSE  README.md
Jetson_Family/: README.md  all_inside_eerything_for_jetson_agx_orin.sh
Jetson_Family/OpenCV/: install_opencv4.5.0_Jetpack4.sh  install_opencv4.9.0_Jetpack6.0.sh
OpenCV_CUDA_Run_Time_Error_Solution/: CMakeLists.txt  README.md
OpenCV_CUDA_Run_Time_Error_Solution/src/: main.cpp
